# Linux_Opensource_Universal_DSPaccelleration

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  Linux_DSP_accelleration.hpp  README.md  VISION.md  release_package.sh  run_tests.sh  setup_linux_env.sh
clap/extension/: dsp_accel.h
clap/plugin_example/: CMakeLists.txt
clap/plugin_example/src/: plugin.cpp
clap/wrappers/lv2/: lv2_bridge.h
clap/wrappers/vst3/: vst3_bridge.h
daemon/: compute_backend.hpp  main.cpp  network_node.hpp  network_server_node.hpp  node_graph.hpp  npu_array_backend.hpp  parallel_processor.hpp  worker.cpp  worker_main.cpp
daemon/ipc/include/: ipc_shm.hpp  sandbox.h
daemon/monitoring/include/: monitor.h
daemon/pipewire/: CMakeLists.txt  module-dsp-accel.cpp
daemon/vulkan/: dsp_shader.comp  vulkan_compute.c  vulkan_compute.cpp  vulkan_compute.h
docs/: ARCHITECTURE.md  DEVELOPER_GUIDE.md  INSTALL.md  ROADMAP_1_0.md  ci.yml  ipc_protocol.md
examples/hello_world_plugin/: CMakeLists.txt  main.c
mcp-server/: index.js  package-lock.json  package.json
sdk/include/: dsp_accel_sdk.h
sdk/platform/: platform_defs.h
sdk/src/: dsp_accel_sdk.c  dsp_accel_sdk.cpp
tests/: CMakeLists.txt  simulation_crash.cpp  test_audio_loopback.cpp  test_control_simulacrum.cpp  test_core.cpp  test_daw_simulation.cpp  test_load_balancing.cpp  test_node_graph_crash.cpp  test_processor_loading.cpp  test_shm_ring_buffer_mt.cpp  test_watchdog.cpp
